tests/fixtures/invalid/set_none.py
# Cannot call set() with None
x = set(None)
